--- a/client/index.html
+++ b/client/index.html
@@ -132,6 +132,7 @@
           <script src="app/main/main.js"></script>
           <script src="app/question/question.controller.js"></script>
           <script src="app/question/question.js"></script>
+          <script src="app/question/question1.controller.js"></script>
           <script src="app/report/report.controller.js"></script>
           <script src="app/report/report.js"></script>
           <script src="app/service/service.controller.js"></script>
