--- a/client/app/landing/landing.html
+++ b/client/app/landing/landing.html
@@ -1,7 +1,7 @@
 <div class="container-fluid no-gutter" ng-controller="LandingCtrl" style="position:relative; overflow: hidden;">
   <img class="hidden-xs" ng-src="/assets/images/lake-min.jpg" alt="" du-parallax y="background"  style="width:100%; position: relative;"/>
   <div class="visible-xs" style="height:370px; position:relative;">
-    <i class="fa fa-chevron-down" style="position:absolute; bottom:0; right:47%;"></i>
+    <!-- <i class="fa fa-chevron-down" style="position:absolute; bottom:0; right:47%;"></i> -->
   </div>
 
   <div style="position: absolute; left: 50%; z-index: 300; top:35px;">
@@ -14,6 +14,7 @@
    </div>
  </div>
 
+ <h1 class="text-center" style="font-size: 3em; position:relative; display: block; margin:0 auto; z-index: -22;"><i class="fa fa-angle-double-down"></i></h1>
  <div style='position: relative;
  background: white;
  z-index: 1;
