--- a/client/app/question/question.html
+++ b/client/app/question/question.html
@@ -119,7 +119,7 @@
 			
 			<!-- <hr style="margin:0;"/> -->
 
-			<div ng-show="question.answers.length <= 0" style="text-align: center;" class="animated pulse" disable-animation="true">
+			<div ng-show="question.answers.length <= 0" style="text-align: center;" disable-animation="true">
 				<hr style="width: 80%;"/>
 
 				<!-- <i class="fa fa-frown-o blue"></i> -->
@@ -136,7 +136,7 @@
 				<h2>{{question.answers_count}} คําตอบเพื่อนใจ</h2>
 			</div>
 
-				<div class="row haveBorder answersInQuestion animated fadeIn" ng-repeat="answer in question.answers | orderBy:'votes_count': true" style="border-bottom: 1px solid #dddddd;" disable-animation="true">
+				<div class="row haveBorder answersInQuestion" ng-repeat="answer in question.answers | orderBy:'votes_count': true" style="border-bottom: 1px solid #dddddd;">
 					<div class="col-md-10">
 						<div class="row" style="background: aliceblue; border-bottom: 1px solid #dddddd;">
 						<div class="col-md-2 no-gutter" style="margin: 15px 0;">
