--- a/client/app/landing/landing.html
+++ b/client/app/landing/landing.html
@@ -1,7 +1,6 @@
 <div class="container-fluid no-gutter" ng-controller="LandingCtrl" style="position:relative; overflow: hidden;">
   <img class="hidden-xs" ng-src="/assets/images/lake-min.jpg" alt="" du-parallax y="background"  style="width:100%; position: relative;"/>
   <div class="visible-xs" style="height:370px; position:relative;">
-    <!-- <i class="fa fa-chevron-down" style="position:absolute; bottom:0; right:47%;"></i> -->
   </div>
 
   <div style="position: absolute; left: 50%; z-index: 300; top:35px;">
@@ -44,13 +43,11 @@
   <div class="col-md-6 col-xs-6 triangleLeft" style="  min-height: 56px;"></div>
   <div style="position:relative; padding-bottom: 50px;">      
    <div id="landingJoinUs" style="position:relative; overflow:hidden;">
-   <!-- style="background:url('/assets/images/rocket-01.png'); background-size: cover;" -->
       <div style="position:relative;">
       <img ng-src="/assets/images/rocket-01.png" style="position:relative; z-index:-1; width:100%; position:absolute; z-index: -1; right:0;" du-parallax y="background">
       </div>
-       <img ng-src="/assets/images/bigLogo.png" style="width:150px; margin-top: 40px;"><br>
+       <img src="/assets/images/bigLogo.png" style="width:150px; margin-top: 40px;"><br>
        มาเป็นส่วนร่วมกับเรา
-       <!-- <i class="fa fa-heart red" style="font-size: 0.7em;" ng-class="shake"></i> -->
        <a id="bigFB" class="btn btn-facebook" href="" ng-click="loginOauth('facebook')">
         <i class="fa fa-facebook" style="color:white;"></i> สมัครผ่าน Facebook</a>
       <p>หรือ</p>
