minor fix in landing page

--- a/client/app/landing/landing.html
+++ b/client/app/landing/landing.html
@@ -6,9 +6,9 @@
   <div style="position: absolute; left: 50%; z-index: 300; top:35px;">
     <div id="mainTitle" class="animated fadeIn white text-shadow" style="position: relative; left: -50%;">
      <h1 class="" style="margin:0;">เพื่อนใจ</h1>
-     <h2 class="text-center" style="width:80%; margin:0 auto; display: block; margin-top: -30px;">ชุมชนเพื่อเกื้อหนุนและพัฒนาจิตใจของกันและกัน</h2>
-        <a id="bigFB" class="btn text-shadow puanjaiBorder" ng-href="/main" style="margin-top: 30px; padding:4px 10px">
-         <i class="fa fa-login" style="color:white;"></i>เข้าสู่หน้าหลัก
+     <h2 class="text-center">ชุมชนเพื่อเกื้อหนุนและพัฒนาจิตใจของกันและกัน</h2>
+        <a id="enterMain" class="btn text-shadow puanjaiBorder" ng-href="/main" style="margin-top: 30px; padding:4px 10px">
+         <i class="fa fa-login"></i>เข้าสู่หน้าหลัก
        </a>
    </div>
  </div>
@@ -46,7 +46,7 @@
       <div style="position:relative;">
       <img ng-src="/assets/images/rocket-01.png" style="position:relative; z-index:-1; width:100%; position:absolute; z-index: -1; right:0;" du-parallax y="background">
       </div>
-       <img src="/assets/images/bigLogo.png" style="width:150px; margin-top: 40px;"><br>
+       <img ng-src="/assets/images/biglogo.png" style="width:150px; margin-top: 40px;"><br>
        มาเป็นส่วนร่วมกับเรา
        <a id="bigFB" class="btn btn-facebook" href="" ng-click="loginOauth('facebook')">
         <i class="fa fa-facebook" style="color:white;"></i> สมัครผ่าน Facebook</a>
