--- a/client/app/question/question.html
+++ b/client/app/question/question.html
@@ -25,7 +25,7 @@
 						</li>
 						<hr style="width:80%;">
 						<li>
-							<a ng-click="shareFB('/questions/{{::question._id}}')"><i class="fa fa-share"></i><br>แชร์</a>
+							<a ng-click="shareFB('puanjai.com/questions/{{::question._id}}')"><i class="fa fa-share"></i><br>แชร์</a>
 						</li>
 					</ul>
 				</div>
@@ -115,7 +115,7 @@
 
 		<h2 style="text-align: center;">ยังไม่ได้ความช่วยเหลือ</h2>
 		<p>รู้จักคนที่สามารถช่วยเพื่อนใจได้ <span class="blue">ฝากแชร์การด้วยจ้า</span></p>
-		<a class="btn btn-facebook btn-lg white" ng-click="shareFB('/questions/{{::question._id}}')">
+		<a class="btn btn-facebook btn-lg white" ng-click="shareFB('puanjai.com/questions/{{::question._id}}')">
 			<i class="fa fa-facebook white"></i> แชร์บน Facebook!
 		</a>
 		<hr style="width: 80%;"/>
