--- a/client/app/question/question.html
+++ b/client/app/question/question.html
@@ -1,4 +1,15 @@
 <view-title>{{question.name || 'ไม่มีคําถามนี้ในระบบ'}} -</view-title>
+<meta view-head property="og:title" content="{{::question.name}}" />
+<meta view-head property="og:site_name" content="เพื่อนใจ Soul Friend"/>
+<meta view-head property="og:image" itemprop="image primaryImageOfPage" content="/assets/images/biglogo.png">
+<meta view-head property="og:url"
+content="puanjai.com/questions/{{::question._id}}" />
+<meta view-head property="og:description" content="{{::question.body | htmlToText | limitTo:550 }}" />
+<meta view-head property="fb:app_id" content="816905961709405" />
+<meta view-head property="og:type" content="website" />
+<meta view-head property="og:locale" content="th_TH" />
+
+
 <div class="container-fluid">
 
 	<div class="col-md-2"></div>
