--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <base href="/">
     <title ng-bind-template="{{viewTitle}} เพื่อนใจ Soul Friends">เพื่อนใจ Soul Friends</title>
-    <meta name="description" content="">
+    <meta name="description" content="ถามปัญหาใจ">
+    <meta name="keywords" content="ถามปัญหาใจ">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(client) app/vendor.css -->
