--- a/client/app/question/question.html
+++ b/client/app/question/question.html
@@ -1,13 +1,12 @@
 <view-title>{{question.name || 'ไม่มีคําถามนี้ในระบบ'}} -</view-title>
-<meta view-head property="og:title" content="{{::question.name}}" />
-<meta view-head property="og:site_name" content="เพื่อนใจ Soul Friend"/>
-<meta view-head property="og:image" itemprop="image primaryImageOfPage" content="/assets/images/biglogo.png">
-<meta view-head property="og:url"
-content="puanjai.com/questions/{{::question._id}}" />
-<meta view-head property="og:description" content="{{::question.body | htmlToText | limitTo:550 }}" />
-<meta view-head property="fb:app_id" content="816905961709405" />
-<meta view-head property="og:type" content="website" />
-<meta view-head property="og:locale" content="th_TH" />
+<meta property="og:title" content="{{::question.name}}" view-head/>
+<meta property="og:site_name" content="เพื่อนใจ Soul Friend"view-head/>
+<meta property="og:image" itemprop="image primaryImageOfPage" content="/assets/imageview-heads/biglogo.png"/>
+<meta property="og:url" content="puanjai.com/questions/{{::question._id}}" view-head/>
+<meta property="og:description" content="{{::question.body | htmlToText | limitTo:550 }}" view-head />
+<meta property="fb:app_id" content="816905961709405" view-head/>
+<meta property="og:type" content="website" view-head/>
+<meta property="og:locale" content="th_TH" view-head/>
 
 
 <div class="container-fluid">
