--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -145,7 +145,7 @@
               <div>
                 <ul class="nav nav-pills">
                   <li>
-                    <a ng-click="shareFB('puanjai.com/questions/{{question._id}}')"><i class="fa fa-child"></i> แชร์</a>
+                    <a ng-click="shareFB(question.name, question._id, question.body)"><i class="fa fa-child"></i> แชร์</a>
                   </li>
                   <li>
                     <a ng-href="/questions/{{question._id}}"><i class="fa fa-reply"></i> ช่วยเพื่อน</a>
