add meta tags for main page

--- a/client/app/about/aboutcreator.html
+++ b/client/app/about/aboutcreator.html
@@ -1,4 +1,14 @@
 <view-title>เกี่ยวกับผู้สร้างเพื่อนใจ -</view-title>
+<meta name="description" content="ศุภกร เลาหสงคราม - สวัสดีครับผมชื่อนายศุภกร เลาหสงคราม  ตอนนี้ ไม่มีรายได้ ไม่มีงานประจํา ไม่มีหน้าตาอะไรในสังคม มีอย่างเดียวคือ จิตใจที่ต้องการจะทําดีต่อสังคมโดยเชื่อว่าถ้าทําดีแล้วจะต้องอยู่รอดได้</span><br>ผมไม่ได้เอาความฉลาดในการหาเงินเป็นเดิมพันเพื่อการอยู่รอด ไม่ได้เอาความเก่งกาจ อํานาจ หรือวุตจากเมืองนอกอะไรมาเป็นเดิมพัน แต่จะเอาความดีที่ผมเคยทํา กําลังทํา และ จะทําเป็นเดิมพันโดยที่ผมเชื่อว่า ถ้าทําดีจริง ยังไงสังคมก็ต้องช่วยและสนันสนุนความดีนั่น" view-head>
+<meta name="keywords" content="ถาม, ตอบ, ปัญหาใจ, เพื่อนใจ, ศุภกร เลาหสงคราม" view-head>
+<meta property="og:title" content="ศุภกร เลาหสงคราม" view-head/>
+<meta property="og:site_name" content="เพื่อนใจ Soul Friend"view-head/>
+<meta property="og:image" itemprop="image primaryImageOfPage" content="/assets/imageview-heads/biglogo.png"/>
+<meta property="og:url" content="puanjai.com/aboutcreator" view-head/>
+<meta property="og:description" content="ศุภกร เลาหสงคราม - สวัสดีครับผมชื่อนายศุภกร เลาหสงคราม  ตอนนี้ ไม่มีรายได้ ไม่มีงานประจํา ไม่มีหน้าตาอะไรในสังคม มีอย่างเดียวคือ จิตใจที่ต้องการจะทําดีต่อสังคมโดยเชื่อว่าถ้าทําดีแล้วจะต้องอยู่รอดได้</span><br>ผมไม่ได้เอาความฉลาดในการหาเงินเป็นเดิมพันเพื่อการอยู่รอด ไม่ได้เอาความเก่งกาจ อํานาจ หรือวุตจากเมืองนอกอะไรมาเป็นเดิมพัน แต่จะเอาความดีที่ผมเคยทํา กําลังทํา และ จะทําเป็นเดิมพันโดยที่ผมเชื่อว่า ถ้าทําดีจริง ยังไงสังคมก็ต้องช่วยและสนันสนุนความดีนั่น" view-head />
+<meta property="fb:app_id" content="816905961709405" view-head/>
+<meta property="og:type" content="website" view-head/>
+<meta property="og:locale" content="th_TH" view-head/>
 <div class="container-fluid animated fadeIn no-gutter">
 <h1 style="  font-size: 150px;
   text-align: center;
