--- a/client/app/about/about.html
+++ b/client/app/about/about.html
@@ -1,4 +1,5 @@
 <view-title>เกี่ยวเพื่อนใจ -</view-title>
+<meta name="description" content="ถามหรือตอบปัญหาใจ ชุมชนเพื่อแบ่งปันปัญหาใจและช่วยกันพัฒนาความสุข เพื่อนๆสามารถเข้ามาถามปัญหาใจและมาช่วยกับตอบปัญหาใจ"view-head>
 <div class="container animated fadeIn">
 	<h1><img ng-src="/assets/images/icon.gif" style="margin-bottom:75px;">
 <span style="font-size:5em;">เพื่อนใจทําไมกัน?</span></h1>
@@ -22,23 +23,6 @@
 		Please remember tht there is always someone behind you who supports you even when you are at your worst or your best.<br><br>
 
 		Puanjai would like to sincerely thank you for coming to support this website in anyway you can. Please make use of it and help others along the way in the hope your small act could change someone's life and make this world a little brighter.<br><br>
-		
-
-
-
-
-<!-- 	<div class="page-header">
-	  <h1>เพื่อนใจคือ? <small></small></h1>
-	</div>
-
-	<p class="lead">ชุมชนที่รักกันและกันและยินดีที่จะรับฟังปัญหาของผู้อื่น</p>
-	เพื่อนใจทําไมกัน
-
-
-
-	คุณไม่ได้อยู่คนเดียวในโลกนี้
-
-	ยังมีเพื่อนร่วมโลกที่หวังดีและยินดี -->
 
 
 
