--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,4 +1,15 @@
-<div class="container-fluid" ng-controller="MainCtrl" style="position:relative; padding-bottom: 15px;">
+<meta name="description" content="ถามหรือตอบปัญหาใจ ชุมชนเพื่อแบ่งปันปัญหาใจและช่วยกันพัฒนาความสุข เพื่อนๆสามารถเข้ามาถามปัญหาใจและมาช่วยกับตอบปัญหาใจ"view-head>
+<meta name="author" content="ศุภกร เลาหสงคราม"view-head>
+<meta name="keywords" content="ถาม, ตอบ, ปัญหาใจ, เพื่อนใจ"view-head>
+<meta property="og:title" content="เพื่อนใจ Soul Friends"view-head />
+<meta property="og:site_name" content="เพื่อนใจ Soul Friend"view-head/>
+<meta property="og:image" itemprop="image primaryImageOfPage" content="/assets/images/biglogo.png"view-head/>
+<meta property="og:url" content="puanjai.com" view-head/>
+<meta property="og:description" content="ชุมชนเพื่อแบ่งปันปัญหาใจและช่วยกันพัฒนาความสุข" view-head/>
+<meta property="fb:app_id" content="816905961709405" view-head/>
+<meta property="og:type" content="website" view-head/>
+<meta property="og:locale" content="th_TH" view-head/>
+<div class="container-fluid" ng-controller="MainCtrl" style="position:relative; padding-bottom: 15px;" view-head>
 <div style="position:absolute; width:100%; bottom:0; margin-left:-15px;">
   <div class="background-blue-gradient" style="height: 500px;"></div>
 <img src="/assets/images/background.png" style="width:100%;">
