--- a/client/index.html
+++ b/client/index.html
@@ -8,8 +8,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <base href="/">
     <title ng-bind-template="{{viewTitle}} เพื่อนใจ Soul Friends">เพื่อนใจ Soul Friends</title>
-    <meta name="description" content="ถามปัญหาใจ">
-    <meta name="keywords" content="ถามปัญหาใจ">
+    <meta name="description" content="ถามหรือตอบปัญหาใจ ชุมชนเพื่อแบ่งปันปัญหาใจและช่วยกันพัฒนาความสุข เพื่อนๆสามารถเข้ามาถามปัญหาใจและมาช่วยกับตอบปัญหาใจ"view-head>
+    <meta name="author" content="ศุภกร เลาหสงคราม"/>
+    <meta name="keywords" content="ถาม, ตอบ, ปัญหาใจ, เพื่อนใจ"view-head>
+    <meta property="og:title" content="เพื่อนใจ Soul Friends" view-head/>
+    <meta property="og:site_name" content="เพื่อนใจ Soul Friend"/>
+    <meta property="og:image" itemprop="image primaryImageOfPage" content="/assets/images/biglogo.png"/>
+    <meta property="og:url" content="puanjai.com" view-head/>
+    <meta property="og:description" content="ชุมชนเพื่อแบ่งปันปัญหาใจและช่วยกันพัฒนาความสุข" view-head/>
+    <meta property="fb:app_id" content="816905961709405" />
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="th_TH" />
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(client) app/vendor.css -->
