try to fix fb share

--- a/client/app/landing/landing.html
+++ b/client/app/landing/landing.html
@@ -1,3 +1,15 @@
+<title ng-bind-template="{{viewTitle}} เพื่อนใจ Soul Friends">เพื่อนใจ Soul Friends</title>
+<meta name="description" content="ถามหรือตอบปัญหาใจ ชุมชนเพื่อแบ่งปันปัญหาใจและช่วยกันพัฒนาความสุข เพื่อนๆสามารถเข้ามาถามปัญหาใจและมาช่วยกับตอบปัญหาใจ"/>
+<meta name="author" content="ศุภกร เลาหสงคราม"/>
+<meta name="keywords" content="ถาม, ตอบ, ปัญหาใจ, เพื่อนใจ"/>
+<meta property="og:title" content="เพื่อนใจ Soul Friends" />
+<meta property="og:site_name" content="เพื่อนใจ Soul Friend"/>
+<meta property="og:image" itemprop="image primaryImageOfPage" content="/assets/images/biglogo.png"/>
+<meta property="og:url" content="puanjai.com"/>
+<meta property="og:description" content="ชุมชนเพื่อแบ่งปันปัญหาใจและช่วยกันพัฒนาความสุข"/>
+<meta property="fb:app_id" content="816905961709405" />
+<meta property="og:type" content="website" />
+<meta property="og:locale" content="th_TH" />
 <div class="container-fluid no-gutter" ng-controller="LandingCtrl" style="position:relative; overflow: hidden;">
   <img class="hidden-xs" ng-src="/assets/images/lake-min.jpg" alt="" du-parallax y="background"  style="width:100%; position: relative;"/>
   <div class="visible-xs" style="height:370px; position:relative;">
