--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -9,7 +9,8 @@
 <meta property="fb:app_id" content="816905961709405" view-head/>
 <meta property="og:type" content="website" view-head/>
 <meta property="og:locale" content="th_TH" view-head/>
-<div class="container-fluid" ng-controller="MainCtrl" style="position:relative; padding-bottom: 15px;" view-head>
+
+<div class="container-fluid" ng-controller="MainCtrl" style="position:relative; padding-bottom: 15px;">
 <div style="position:absolute; width:100%; bottom:0; margin-left:-15px;">
   <div class="background-blue-gradient" style="height: 500px;"></div>
 <img src="/assets/images/background.png" style="width:100%;">
