--- a/client/index.html
+++ b/client/index.html
@@ -44,9 +44,7 @@
 
     <div ng-include="'components/navbar/navbar.html'"></div>
     <!-- Add your site or application content here -->
-      <div>
-          <div class="ng-cloak" ui-view="" autoscroll="true" style="border-top:51px solid #FFF9AA;"></div>
-      </div>
+          <main class="ng-cloak" ui-view="" autoscroll="true" style="border-top:51px solid #FFF9AA;"></main>
 
     <div ng-include="'components/footer/footer.html'"></div>
 
