try other method

--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <base href="/">
     <title ng-bind-template="{{viewTitle}} เพื่อนใจ Soul Friends">เพื่อนใจ Soul Friends</title>
+    <meta name="google-site-verification" content="GNcxRy-9yeamy_T3YeKyU9k28rpASTJX7QJEJYUGDhQ" />
     <meta name="description" content="ถามหรือตอบปัญหาใจ ชุมชนเพื่อแบ่งปันปัญหาใจและช่วยกันพัฒนาความสุข เพื่อนๆสามารถเข้ามาถามปัญหาใจและมาช่วยกับตอบปัญหาใจ"view-head>
     <meta name="author" content="ศุภกร เลาหสงคราม"/>
     <meta name="keywords" content="ถาม, ตอบ, ปัญหาใจ, เพื่อนใจ"view-head>
