fixed compat issue

--- a/client/app/ask/ask.html
+++ b/client/app/ask/ask.html
@@ -1,5 +1,5 @@
-<div id="ask" class="container" style="padding: 0 25px; position:relative;">
-
+<div class="container-fluid" style="position:relative;">
+<div id="ask" class="container" style="padding: 0 25px;">
 
 	<div class="row">
 		<div class="col-md-7">
@@ -91,4 +91,5 @@
 		</div>
 	</div>
 
+</div>
 </div>
