--- a/client/app/landing/landing.html
+++ b/client/app/landing/landing.html
@@ -56,7 +56,7 @@
   <div class="col-md-12">      
    <div id="landingJoinUs" style="position:relative; overflow:hidden;">
       <div style="position:relative;">
-      <img ng-src="/assets/images/rocket-01.png" style="position:relative; z-index:-1; width:100%; position:absolute; z-index: -1; right:0;" du-parallax y="background">
+      <img ng-src="/assets/images/rocket-01.png" style="position:relative; z-index:-1; min-height: 738px; position:absolute; z-index: -1; right:0;" du-parallax y="background">
       </div>
        <img ng-src="/assets/images/biglogo.png" style="width:150px; margin-top: 40px;"><br>
        มาเป็นส่วนร่วมกับเรา
