--- a/client/app/landing/landing.html
+++ b/client/app/landing/landing.html
@@ -53,7 +53,7 @@
 <div class="animated fadeIn" style="position:relative;" ani-view>  
   <div class="col-md-6 col-xs-6"></div>
   <div class="col-md-6 col-xs-6 triangleLeft" style="  min-height: 56px;"></div>
-  <div class="col-md-12">      
+  <div class="col-md-12" style="padding-bottom: 40px;">      
    <div id="landingJoinUs" style="position:relative; overflow:hidden;">
       <div style="position:relative;">
       <img ng-src="/assets/images/rocket-01.png" style="position:relative; z-index:-1; min-height: 738px; position:absolute; z-index: -1; right:0;" du-parallax y="background">
